cmake_minimum_required(VERSION 3.12)
project(leetcode)

set(CMAKE_CXX_STANDARD 11 -std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address,undefined")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address,undefined")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -g3")

add_executable(ThreeZero leetcode/ThreeZero.cpp)
add_executable(FourTwo leetcode/FourTwo.cpp)
add_executable(ThreeNineFive leetcode/ThreeNineFive.cpp)
add_executable(ThreeEightSeven leetcode/ThreeEightSeven.cpp)
add_executable(ThreeEightZero leetcode/ThreeEightZero.cpp)
add_executable(ThreeFourSeven leetcode/ThreeFourSeven.cpp)
add_executable(ThreeFourFour leetcode/ThreeFourFour.cpp)
add_executable(ThreeFourOne leetcode/ThreeFourOne.cpp)
add_executable(ThreeThreeNine leetcode/ThreeThreeNine.cpp)